[project]
name = "next-word-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "achalapandit",email = "achala.s.pandit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
